fix misaligned text

--- a/src/routes/governance/proposal.scss
+++ b/src/routes/governance/proposal.scss
@@ -7,23 +7,23 @@
     border-bottom: 1px solid $white;
     margin-bottom: 2px;
   }
-  
+
   &__top-title {
     margin: 0px;
   }
 
-    &__row {
+  &__row {
     display: flex;
     align-items: flex-end;
   }
 
-    &__item-left {
+  &__item-left {
     margin: 1px;
-    color: $gray1
+    color: $gray1;
   }
 
   &__item-right {
     margin: 1px;
+    word-break: break-all;
   }
-
 }
